automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <body>
     <main id="main"></main>
     <script src="js/index.js"></script>
+    
+    <div style="background-color: rgb(249, 249, 249); text-align: center;">Hello, DOM!</div>
   </body>
 
 </html>
